 HT ChangeLog
==============

version 0.8-trunk:
	- compiles with gcc 3.4
	- disassembler:
		- IBM/Motorola PowerPC (PPC) (new)
	- file formats:
		- XBE (X-Box executable) support by Stefan Esser (experimental)
		- Mach-O header and image support for PPC and x86 (experimental)
		- FLT (Flat) support (experimental)
		- PEF support (experimental)
		- XCOFF32 support
		- COFF support for coff files without optional header
		- COFF big-endian support
		- ELF PPC support
		- ELF relocatable file support (experimental)
		- fixed buggy ELF reading code partially (thanks rpm28)
	- eval dialog: added function help
	- eval: not ('~') and logical-not ('!') operators
	- disassembler interface (int maxlen, not byte maxlen)
	- Win32: fixed access to native windows clipboard
	- Win32: high CPU usage problems fixed (sys_suspend() bugged)

version 0.7.5:
	- fixed bug in bnstr() with defaultbase > 10
	- fixed buffer overflow in htelfsym.cc (thanks Luis Barrancos)
	- fixed bug in ht_sys_file/ht_stdio_file::extend()
	- fixed bug, causing invalid history entries when specifying files
	  on the command-line
	- fixed bug in x86-assembler (correct opcode for [ebp+esp])
	- minor fixes in eval-lexer

version 0.7.4:
	- fixed bug in COFF code (hdr_ofs sometimes fixed to 0x800)
	- fixed bug in blockop (checking if const/var op didn't set 'i' and 'o' and sometimes failed)
	- fixed bug in Java bytecode disassembler: invalid opcodes crash.
	  Thanks Jerome (freejazz).
	- fixed bug in Java class processing code: errors always crash HT
	- fixed: 0xcafebabe in mach_kernel... made classread more strict
	- fixed object streaming bug in GET_OBJECT (only when compiled with GCC 3.3+)

version 0.7.3:
	- some keys were assigned to multiple commands in hex-viewer
	- percent display for searches and scrollbars in big files was incorrect
	- POSIX: improved keyboard handling (merge from 0.9.0 tree)
	- POSIX: X11 textmode keyboard support didn't work :-), was not configured correctly