@@ -3,6 +3,7 @@
 
 version 0.8-trunk:
 	- compiles with gcc 3.4
+	- fixed buggy blockop-progress indicator
 	- disassembler:
 		- IBM/Motorola PowerPC (PPC) (new)
 	- file formats:
